--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -26,7 +26,13 @@
 
 .submit-button {
   display: flex;
-  padding: 1em 3em;
+  background-color: #647bc0;
+  padding: 1em 3.5em;
   border-radius: 4px;
-  font-size: inherit;
+  cursor: pointer;
+  font-size: 1.1em;
+}
+
+.submit-button:hover {
+  background-color: #4766c2;
 }
