--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -18,21 +18,35 @@
   align-items: center;
 }
 
+input[type="file"] {
+  display: none;
+}
+
 .file-input {
   display: flex;
-  padding: 1em;
+  background-color: #647bc0;
+  padding: 1em 3.5em;
+  margin: 1em;
+  border: 2px solid black;
+  border-radius: 4px;
+  cursor: pointer;
   font-size: inherit;
+}
+
+.file-input:hover {
+  background-color: #4766c2;
 }
 
 .submit-button {
   display: flex;
-  background-color: #647bc0;
+  background-color: #5ad364;
   padding: 1em 3.5em;
+  margin: 1em;
   border-radius: 4px;
   cursor: pointer;
   font-size: 1.1em;
 }
 
 .submit-button:hover {
-  background-color: #4766c2;
+  background-color: #3ccc48;
 }
