--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -37,11 +37,20 @@ input[type="file"] {
   background-color: #4766c2;
 }
 
+.selected-file-names {
+  display: flex;
+  justify-content: center;
+  padding: 0.2em;
+  margin: 0.2em;
+  width: 10em;
+  text-overflow: ellipsis;
+}
+
 .submit-button {
   display: flex;
   background-color: #5ad364;
   padding: 1em 3.5em;
-  margin: 1em;
+  margin: 2em;
   border-radius: 4px;
   cursor: pointer;
   font-size: 1.1em;
